# speed_indicator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  settings.gradle
android/: build.gradle
android/src/androidTest/java/com/example/speed_indicator/: ExampleInstrumentedTest.java
android/src/main/: AndroidManifest.xml
android/src/main/aidl/com/example/speed_indicator/: ICommand.aidl
android/src/main/java/com/example/speed_indicator/: Activity.java  DataBroadcastReceiver.java  DataService.java  DataServiceThread.java  DataServiceWorker.java  State.java  XActivity.java
android/src/main/java/com/example/speed_indicator/service/: DataService.java  DataServiceThread.java
android/src/main/java/com/example/throttle/: Activity.java
android/src/main/java/org/libsdl/app/: SDLActivity.java
android/src/main/res/values/: strings.xml
android/src/test/java/com/example/speed_indicator/: ExampleUnitTest.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/core/: CMakeLists.txt  main.cpp
app/src/main/java/com/example/throttle/: MainActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  Logger.hpp  main.cpp
src/core/engine/: Engine.cpp  Engine.hpp  Fps.cpp
src/core/gui/: GraphicsObject.cpp  GraphicsObject.hpp
src/core/gui/SpeedIndicator/: Arrow.cpp  Arrow.hpp  BasePlate.cpp  BasePlate.hpp  SpeedIndicator.cpp  SpeedIndicator.hpp
src/core/misc/: ExtraPrimitives.cpp  ExtraPrimitives.hpp  Texture.cpp
src/core/resources/fonts/: fonts.cpp
src/core/service/: JNI.cpp  SpeedService.cpp  SpeedService.hpp
src/core/theme/: theme.cpp
src/core/widget/: Widget.cpp  Widget.hpp
src/data_generator/core/: CMakeLists.txt  JService.cpp  JService.hpp  main.cpp
src/data_generator/tests/: CMakeLists.txt
src/speed_indicator/core/: CMakeLists.txt  Configuration.cpp  Logger.hpp
src/speed_indicator/core/engine/: Engine.hpp  Fps.cpp  Fps.hpp
src/speed_indicator/core/gui/: GraphicsObject.cpp  GraphicsObject.hpp
src/speed_indicator/core/gui/SpeedIndicator/: SpeedIndicator.hpp
src/speed_indicator/core/misc/: ObjectRaii.hpp  Point.cpp  Point.hpp  Size.cpp  Size.hpp  Texture.hpp  math.cpp  math.hpp
src/speed_indicator/core/resources/fonts/: fonts.hpp
src/speed_indicator/core/service/: JNI.cpp  JNI.hpp  SpeedService.cpp  SpeedService.hpp
src/speed_indicator/core/theme/: Font.cpp  Font.hpp  theme.hpp
src/speed_indicator/core/widget/: Widget.cpp  Widget.hpp
src/tests/: CMakeLists.txt
